--- a/Makefile.CUDA
+++ b/Makefile.CUDA
@@ -12,41 +12,27 @@ CXX = g++
 NVCC = nvcc
 #
 #
-BLASLIB = -lcublas -lcusparse
-CXXFLAGS=-O3
-CFLAGS=-O3
-# this is for tesla-00 and tesla-01
-ARCH=--gpu-architecture sm_13
+PRECISION = -arch sm_13 -DDOUBLE_PRECISION 
+CXXFLAGS = -I$(CUDA_INSTALL_PATH)/include
+LIBS = -L$(CUDA_INSTALL_PATH)/lib64 -lcudart -lm 
 #
-TARGET=ex65 ex66 ex67 ex68 ex69
+TARGET 	= ex78
 #
 ALL: $(TARGET)
 #
-ex65:	ex65.o
-	$(NVCC) -o $@ $< 
-
-ex66:	ex66.o
-	$(NVCC) -o $@ $< 
-
-ex67:	ex67.o
-	$(NVCC) -o $@ $< 
-
-ex68:	ex68.o
-	$(NVCC) -o $@ $< 
-
-ex69:	ex69.o cg_cublas.o
-	$(NVCC) -o $@ $^ $(BLASLIB)  
+ex78:	ex78.o 
+	$(NVCC) -o $@ $^ $(LIBS) -lcublas -lcusparse 
 
 ################################################################################
 # Rules and targets
 .c.o:
-	$(CC)  $(CFLAGS) -c $< 	
+	$(CC)  $(CFLAGS) $(PRECISION) -c $< 	
 
 .cpp.o:
-	$(CXX)  $(CXXFLAGS)  -c $< 	
+	$(CXX)  $(CXXFLAGS) $(PRECISION)  -c $< 	
 
 .cu.o:
-	$(NVCC)  $(CXXFLAGS)  -o $@ -c $< $(ARCH)
+	$(NVCC)  $(CXXFLAGS) $(PRECISION) -o $@ -c $<	
 
 clean:
 	rm -f *.o $(TARGET)
